fix: 修复table scrollbar及form校验bug

--- a/src/styles/theme-default/src/Table.styl
+++ b/src/styles/theme-default/src/Table.styl
@@ -227,6 +227,7 @@
 .kd-table-body
   width 100%
   overflow-y auto
+  scrollbar-width none
 
 @keyframes loadTree{
   from {transform: rotate(0deg)}
